--- a/flask-practice/templates/regist.html
+++ b/flask-practice/templates/regist.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>新規登録</h1>
-<form method="POST">
+<form method="POST">  <!-- ■　"submit"とセット。 -->
     <table border="1">
         <tr>
             <th>タイトル</th>
@@ -9,14 +9,14 @@
         </tr>
         <tr>
             <td>
-                <input type="text" name="title">
+                <input type="text" name="title">  <!--  -->
             </td>
             <td>
-                <input type="text" name="body">
+                <input type="text" name="body">  <!--  -->
             </td>
         </tr>
     </table>
-    <input type="submit" value="新規登録">
+    <input type="submit" value="新規登録">  <!-- "submit"　フォーム送信ボタン　■に従ってinputの値を集め、POSTリクエストでデータ送信 -->
 </form>
-<a href="/" role="button">一覧に戻る</a>
+<a href="/" role="button">一覧に戻る</a>  <!-- aタグ　リンクボタン　GETリクエストで画面移動 -->
 {% endblock %}
