--- a/flask-practice/templates/regist.html
+++ b/flask-practice/templates/regist.html
@@ -9,10 +9,10 @@
         </tr>
         <tr>
             <td>
-                <input type="text" name="title">  <!--  -->
+                <input type="text" name="title">  <!-- name="title"が、Pythonに渡す値。Python側のgetの中身になる。request.form.get('title') -->
             </td>
             <td>
-                <input type="text" name="body">  <!--  -->
+                <input type="text" name="body">  <!-- name="body"が、上記と同じ。 -->
             </td>
         </tr>
     </table>
