トップ画面に「編集」ボタンを設置・編集画面のGET部分を実装

--- a/flask-practice/templates/index.html
+++ b/flask-practice/templates/index.html
@@ -7,13 +7,17 @@
     {% else %}
         <table border="1">
             <tr>
-                <th>タイトル</th>
-                <th>メモ</th>
+                <th>タイトル</th>  <!-- 「タイトル」ヘッダーセル -->
+                <th>メモ</th>  <!-- 「メモ」ヘッダーセル -->
+                <th></th>  <!-- 空のヘッダーセル -->
             </tr>
             {% for memo in memo_list %}
                 <tr>
-                    <td>{{memo.title}}</td>
-                    <td>{{memo.body}}</td>
+                    <td>{{memo.title}}</td>  <!-- 個別のタイトル -->
+                    <td>{{memo.body}}</td>  <!-- 個別のメモ -->
+                    <td>
+                        <a href="/{{memo.id}}/edit" role="button">編集</a>  <!-- memoのidを含む編集画面へのリンクを仕込んだ「編集」ボタンを設置 -->
+                    </td>
                 </tr>
             {% endfor %}
         </table>
