--- a/flask-practice/templates/edit.html
+++ b/flask-practice/templates/edit.html
@@ -9,10 +9,10 @@
         </tr>
         <tr>
             <td>
-                <input type="text" name="title" value="{{memo.title}}">  <!--  -->
+                <input type="text" name="title" value="{{memo.title}}">  <!-- name="title"はPythonに渡されるPOST時のキー名・{{memo.title}}は初期値表示用 -->
             </td>
             <td>
-                <input type="text" name="body" value="{{memo.body}}">  <!--  -->
+                <input type="text" name="body" value="{{memo.body}}">
             </td>
         </tr>
     </table>
