--- a/flask-practice/templates/delete.html
+++ b/flask-practice/templates/delete.html
@@ -10,7 +10,7 @@
         </tr>
         <tr>
             <td>
-                <input type="text" name="title" value="{{memo.title}}" disabled>  <!-- 「disabled」でフォームを不活性にし、編集無効にしておく -->
+                <input type="text" name="title" value="{{memo.title}}" disabled>  <!-- 「disabled」でフォームを非活性にし、編集無効にしておく -->
             </td>
             <td>
                 <input type="text" name="body" value="{{memo.body}}" disabled>
