--- a/flask-practice/templates/base.html
+++ b/flask-practice/templates/base.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>メモアプリ</title>
 </head>
+<!-- フラッシュメッセージ app.pyでflash()されたメッセージを、HTML上で表示するための仕組み。Jinjaのテンプレート処理-->
+<body>
+ <!-- Flask関数get_flashed_messages()で、「app.pyがflash()されたメッセージ（メッセージのカテゴリを含む）をまとめて」変数messages（メッセージのリスト）に格納 -->  
+  {% with messages = get_flashed_messages(with_categories=true) %}<!-- with→{% with %} ~ {% endwith %}の中だけで使えるローカル変数を作るためのjinja文法 -->
+    {% if messages %}   <!-- もし変数messagesの中にメッセージが1つでもあるなら、（messagesが空リストなら下記の処理はしない） -->
+      <ul>
+        <!-- with_categories=trueの時のリストは[("success", "ログインしました"),("error", "ユーザー名が違います")]の様になるから、変数は2つ用意してる -->
+        {% for category, message in messages %}   <!-- 変数messagesからメッセージをカテゴリ付きで1つずつ取り出すループ -->   
+          <li>[{{ category }}] {{ message }}</li>   <!-- 取り出したcategoryとmessageをリスト（箇条書き）として表示する -->
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+
+  {% block content %}{% endblock %}
+</body>
 <body>
     {% block content %}
     {% endblock %}
