--- a/flask-practice/templates/delete.html
+++ b/flask-practice/templates/delete.html
@@ -19,5 +19,5 @@
     </table>
     <input type="submit" value="削除">  <!-- "submit"　フォーム送信ボタン　■に従ってinputの値を集め、POSTリクエストでデータ送信 -->
 </form>
-<a href="/" role="button">一覧に戻る</a>  <!-- aタグ　リンクボタン　GETリクエストで画面移動 -->
+<a href="{{ url_for('top') }}" role="button">一覧に戻る</a>  <!-- aタグ　リンクボタン　GETリクエストで画面移動 -->
 {% endblock %}
