--- a/flask-practice/templates/regist.html
+++ b/flask-practice/templates/regist.html
@@ -18,5 +18,5 @@
     </table>
     <input type="submit" value="新規登録">  <!-- "submit"　フォーム送信ボタン　■に従ってinputの値を集め、POSTリクエストでデータ送信 -->
 </form>
-<a href="/" role="button">一覧に戻る</a>  <!-- aタグ　リンクボタン　GETリクエストで画面移動 -->
+<a href="{{ url_for('top') }}" role="button">一覧に戻る</a>  <!-- aタグ　リンクボタン　GETリクエストで画面移動 -->
 {% endblock %}
