--- a/flask-practice/templates/regist.html
+++ b/flask-practice/templates/regist.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
+
 <h1>新規登録</h1>
-<form method="POST" action="{{ url_for('regist') }}">  <!-- ■　"submit"とセット。「関数registに紐づいているURL」に送信されるフォーム -->
+
+<form method="POST" action="{{ url_for('regist') }}">  <!-- フォーム送信されたらPOSTリクエストを送る。送り先＝関数registに紐づけて生成するURL -->
     <table border="1">
         <tr>
             <th>タイトル</th>
@@ -18,5 +20,7 @@
     </table>
     <input type="submit" value="新規登録">  <!-- "submit"　フォーム送信ボタン　■に従ってinputの値を集め、POSTリクエストでデータ送信 -->
 </form>
+
 <a href="{{ url_for('top') }}" role="button">一覧に戻る</a>  <!-- aタグ　リンクボタン　GETリクエストで画面移動 -->
+
 {% endblock %}
